--- a/10-组件化开发/02-全局组件和局部组件.html
+++ b/10-组件化开发/02-全局组件和局部组件.html
@@ -23,7 +23,7 @@
     <p>内容------内容</p>
     </div>`
   })
-  // 2.注册组件（全局组件，以为这可以在多个Vue的实例下使用）
+  // 2.注册组件（全局组件，这可以在多个Vue的实例下使用）
   // Vue.component('cpn', cpn)
 
   const app2 = new Vue({
