--- a/10-组件化开发/06-组件中的存放问题.html
+++ b/10-组件化开发/06-组件中的存放问题.html
@@ -18,12 +18,12 @@
   </div>
 </script>
 <!-- 2.template标签 -->
-<template id="idd">
-  <div>
-    <h2>我是标题</h2>
-    <p>我是内容,呵呵呵</p>
-  </div>
-</template>
+<!--<template id="idd">-->
+<!--  <div>-->
+<!--    <h2>我是标题</h2>-->
+<!--    <p>我是内容,呵呵呵</p>-->
+<!--  </div>-->
+<!--</template>-->
 
 <script src="../js/vue.js"></script>
 <script>
